<?xml version="1.0"?>
<package>
  <name>arm_node</name>
  <version>0.0.0</version>
  <description>The basic_node package</description>

  <maintainer>Chrise96</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>arbotix_controllers</run_depend>
  <run_depend>arbotix_python</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
